# ContactDiscoveryService-Icelake

./: .editorconfig  .gitignore  .gitmodules  .java-version  Dockerfile  README.md  micronaut-cli.yml  mvnw  pom.xml
.github/: dependabot.yml
.github/workflows/: enclave.yml  push-lambda.yml  push.yml  test.yml
c/: .gitignore  JASMIN.md  Makefile  Makefile.base  Makefile.subdirs  README.md  aflfuzz.sh  cds-test.conf  cds.conf  cds.edl  cds_Standard_DC2s_v3.conf  constant_time_check.c  fuzz.c
c/aci_pni_uak_helpers/: aci_pni_uak_helpers.c  aci_pni_uak_helpers.h
c/docker/: Dockerfile  cds-jasmin.opam  cds-jasmin.opam.locked  sgx_runtime_libraries.sh  sources.list
c/enclave/: enc.c  enc_log.h  shim.h
c/fixedset/: fixedset.c  fixedset.h
c/halfsiphash/: halfsiphash.h  halfsiphash.jinc  jhalfsiphash.jazz
c/jasmin.prod/: params.jinc
c/jasmin.prod.soenv/: params.jinc
c/jasmin.staging/: params.jinc
c/jasmin.test/: params.jinc
c/jasmin.test.soenv/: params.jinc
c/jnishim/: jnishim.c
c/noiseutil/: noise.c  noise.h
c/ohtable/: johtable.jazz  ohtable.c  ohtable.h  ohtable.jinc
c/path_oram/: bucket.c  bucket.h  bucket.jinc  jasmin.slice  jbucket.jinc  jpath_oram.jazz  jposition_map.jinc  jstash.jinc  jtree_path.jinc  oram_position_map.jinc  path_oram.c  path_oram.h  path_oram.jinc  position_map.c  position_map.h  position_map.jinc  stash.c  stash.h  stash.jinc  tree_path.c  tree_path.h  tree_path.jinc
c/proto/: pbtools.c  pbtools.h  pbutil.h
c/ratelimit/: jratelimit.jazz  ratelimit.c  ratelimit.h  ratelimit.jinc
filter-cds-updates/: pom.xml
(+171 files in other folders)
